--- a/package.json
+++ b/package.json
@@ -12,25 +12,35 @@
     "@headlessui/react": "^2.1.8",
     "@iconify/react": "^5.0.1",
     "@tailwindcss/postcss": "^4.1.7",
+    "@vercel/blob": "^2.3.0",
     "axios": "^1.7.2",
+    "bcryptjs": "^3.0.3",
     "date-fns": "^3.4.0",
     "gray-matter": "^4.0.3",
+    "jose": "^6.1.3",
+    "megajs": "^1.3.9",
+    "mongoose": "^9.2.1",
     "motion": "^11.15.0",
     "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.7.15",
+    "nodemailer": "^8.0.1",
+    "pdfmake": "^0.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.4.1",
     "react-slick": "^0.30.2",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
