--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/blob": "^2.3.0",
     "axios": "^1.7.2",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "date-fns": "^3.4.0",
     "gray-matter": "^4.0.3",
     "jose": "^6.1.3",
