--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^3.4.0",
     "gray-matter": "^4.0.3",
     "jose": "^6.1.3",
+    "jspdf": "^4.2.0",
     "megajs": "^1.3.9",
     "mongoose": "^9.2.1",
     "motion": "^11.15.0",
